--- a/index.haml
+++ b/index.haml
@@ -15,15 +15,13 @@
       :markdown
         <span id="p-odd-prime">_p_ is an odd prime</span>, <span
         id="a-not-congruent-p">_a_ &#x2262; 0 (mod _p_)</span> and _b_
-        &#x2262; 0 (mod _p_).
+        &#x2262; 0 (mod _p_), and _q_ &ne; _p_ is an odd prime.
 
         1. If _a_ &equiv; _b_ (mod _p_) then (_a_ | _p_) = (_b_ | _p_)
         2. (_a_<sup>2</sup> | _p_) = 1
         3. (_ab_ | _p_) = (_a_ | _p_) (_b_ | _p_)
-        4. (_a_ | _p_) &equiv; _a_<sup>(_p_-1) / 2</sup> (mod _p_)
-        5. (-1 | _p_) =
-           * 1, if _p_ &equiv; 1 (mod 4)
-           * -1, if _p_ &equiv; 3 (mod 4)
+        4. (-1 | _p_) = (-1)<sup>(_p_ - 1) / 2</sup>
+        5. (2 | _p_) = (-1)<sup>(_p_<sup>2</sup> - 1) / 8</sup>
     %div#content
       %h2 Evaluate
       %p#form
