Added LQR to page, tweaked CSS to fit

--- a/ext/style.css
+++ b/ext/style.css
@@ -3,7 +3,8 @@ dl {
 }
 
 dt {
-    width : 15em;
+	clear : both;
+    width : 20em;
     float : left;
     font-weight : bold;
 	line-height : 2em;
