--- a/ext/style.css
+++ b/ext/style.css
@@ -1,8 +1,10 @@
 body {
     font-family : sans-serif;
     font-size : 105%;
-    width : 45em;
+    max-width : 60em;
     margin : 1em auto;
+    padding : 0em 3em;
+    line-height : 2em;
 }
 
 h1 {
@@ -15,7 +17,8 @@ dl {
 
 dt {
     font-weight : bold;
-    line-height : 2em;
+    margin-top : 0.2em;
+    border-top : 1px solid black;
 }
 
 dd {
@@ -26,7 +29,6 @@ dd {
     list-style : none;
     margin-left : 0em;
     padding-left : 2em;
-    line-height : 2em;
 }
 
 #instructions {
