Added fonts to CSS for Windows

--- a/ext/style.css
+++ b/ext/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family : sans-serif;
+    font-family : "DejaVu Sans", "Lucida Sans Unicode", "Arial Unicode MS", sans-serif;
     font-size : 105%;
     max-width : 60em;
     margin : 1em auto;
