--- a/ext/style.css
+++ b/ext/style.css
@@ -1,5 +1,5 @@
 body {
-    max-width : 60em;
+    max-width : 50em;
     margin : 1em auto;
     padding : 0em 3em;
     line-height : 2em;
@@ -29,6 +29,10 @@ dd {
     margin-left : 1em;
     padding-left : 1em;
     border-left : 1px solid #eee;
+}
+
+#results {
+    float : left;
 }
 
 #instructions {
