Removed white borders; applied float to correct element

--- a/ext/style.css
+++ b/ext/style.css
@@ -19,11 +19,6 @@ dd {
     margin-left: 0em;
 }
 
-#instructions, #content {
-    border-top: 1px solid #fff;
-}
-
-
 #results ol {
     list-style: none;
     margin-left: 1em;
@@ -31,7 +26,7 @@ dd {
     border-left: 1px solid #eee;
 }
 
-#results {
+#content {
     float: left;
 }
 
